Se agrego el maquetado de las cards de citas

--- a/src/styles/citasContainer.css
+++ b/src/styles/citasContainer.css
@@ -3,6 +3,11 @@
 }
 
 .contentContainer {
+    background-color: rgb(191, 221, 231);
     min-height: 300px;
     border: 1px solid #000;
+}
+
+.citasText {
+    font-weight: 700;
 }
