--- a/src/styles/principalForm.css
+++ b/src/styles/principalForm.css
@@ -2,8 +2,13 @@
     border: 1px solid #000;
 }
 
+.textContainer > p {
+    font-weight: 700;
+}
+
 .formContainer {
     border: 1px solid #000;
+    background-color: rgb(191, 221, 231);
 }
 
 .labelLarge {
@@ -17,3 +22,4 @@
 .formButton {
     border: 1px solid #000;
 }
+
