--- a/src/styles/citaCard.css
+++ b/src/styles/citaCard.css
@@ -1,3 +1,27 @@
+.cardHeader {
+  background-color: white;
+}
+
+.cardBody {
+    background-color: rgb(191, 221, 231);
+}
+
 .imgContainer > img {
-    border-radius: 100%;
+  width: 4rem;
+  height: 4rem;
+  object-fit: cover;
+  border-radius: 100%;
+}
+
+.cardLabel {
+  width: 100px;
+}
+
+.botonContainer > button{
+    background-color: #FF371E;
+    padding-inline: 50px;
+}
+
+.card {
+    border: 1px solid #000;
 }
